# trsparser

./: .gitignore  Makefile  TRSParser.cabal  index.html  narradar-trsparser.cabal
src/: SRS.hs  SRSParser.hs  SRSScanner.hs  SRSTypes.hs  TRS.hs  TRSParser.hs  TRSScanner.hs  TRSTypes.hs
