name: TRSParser
version: 0.1
license: AllRightsReserved
license-file: ""
copyright:
maintainer: Pepe Iborra <pepeiborra@gmail.com
build-depends: base -any, parsec
stability:
homepage:
package-url:
synopsis:
description: A parser for the Rewriting Termination Competition format (taken from the muTerm tool)
category:
author: Pepe Iborra
exposed-modules: TRSParser, TRSTypes
other-modules: SRSTypes, SRSParser, SRSScanner, TRSScanner
language: Generics
buildable: True
hs-source-dirs: src
ghc-prof-options: 
ghc-options: -O2 -fglasgow-exts
hugs-options:
nhc-options: