name: TRSParser
version: 0.2
license: AllRightsReserved
build-type: Simple
license-file: ""
copyright:
maintainer: Pepe Iborra <pepeiborra@gmail.com>
build-depends: base -any, containers, parsec < 3.0, pretty, term
stability: stable
homepage:
package-url:
synopsis:
description: A parser for the Rewriting Termination Competition format (taken from the muTerm tool)
category:
author: Pepe Iborra
exposed-modules: TRSParser, TRSTypes
other-modules: SRSTypes, SRSParser, SRSScanner, TRSScanner
language: 
buildable: True
hs-source-dirs: src
ghc-prof-options: 
ghc-options:
hugs-options:
nhc-options: