name: TRSParser
version: 0.3
license: AllRightsReserved
build-type: Simple
license-file: ""
copyright: 
maintainer: Pepe Iborra <pepeiborra@gmail.com>
build-depends: base -any, containers, parsec < 3.0, prettyclass, term
stability: stable
homepage: A parser for the Rewriting Termination Competition format
package-url: 
synopsis: A parser for the Rewriting Termination Competition format
description: A parser for the Rewriting Termination Competition format
category:
author: Pepe Iborra
exposed-modules: TRSParser, TRSTypes
other-modules: SRSTypes, SRSParser, SRSScanner, TRSScanner
buildable: True
hs-source-dirs: src
